--- a/src/components/app/app.css
+++ b/src/components/app/app.css
@@ -1,6 +1,10 @@
-.main-wrapper{
+.planet-wrapper{
+    margin: 1rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    
+}
+.hero-wrapper{
+    display: flex;
+    flex-direction: row;
 }
