--- a/src/components/random-planet/random-planet.css
+++ b/src/components/random-planet/random-planet.css
@@ -2,8 +2,7 @@
     display: flex;
     justify-content: center;
     justify-items: center;
-    width: 300px;
-    height: 370px;
+min-width: 400px;
     margin-top: 2rem;
     margin-bottom:2rem;
 
